# cv_shelves

./: Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  example.env  hf_loader.py  main.py  pyproject.toml
DB/: README.md  create_user.py  crud.py  database.py  init-db.sql  init_db.py  schema.py
alembic/: env.py
alembic/versions/: 02dfbea35523_initial_migration.py  33769a6fa6c0_add_image_base64_field_to_predictions.py  972d62b41a7e_add_is_superuser_field_to_users.py  a4fcd7e10b8a_add_password_hash_to_users.py
app/: config.py  middleware.py  routers.py  simple_admin.py
app/services/: ml_service.py
app/utils/: model_loader.py
front/: .gitignore  Dockerfile  Makefile  README.md  package-lock.json  package.json  start.sh
front/public/: index.html  manifest.json
front/src/: App.css  App.tsx  index.tsx
front/src/components/: ApiStatus.tsx  AuthModal.tsx  DetectionImage.tsx  ImageUpload.tsx  Layout.tsx  ModelSelector.tsx  PredictionDisplay.tsx
front/src/context/: PredictionContext.tsx
front/src/pages/: DetectionPage.tsx  HistoryPage.tsx  HomePage.tsx  LoginPage.tsx
front/src/services/: api.ts
front/src/types/: index.ts
front/src/utils/: imageHash.ts
scripts/: download_models.py  download_models_docker.sh  run_migrations.sh  start_app.sh
