[project]
name = "cv-shelves-backend"
version = "0.1.0"
description = "ML Backend service for CV Shelves application"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "huggingface-hub>=0.35.3",
    "python-multipart>=0.0.20",
    "rfdetr>=1.3.0",
    "ultralytics>=8.3.216",
    "uvicorn>=0.38.0",
    "pillow>=10.4.0",
    "streamlit>=1.39.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "opencv-python>=4.8.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.29.0",
    "bcrypt>=4.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]
